tests/negative-fixtures/external_crate_cannot_assign_scheduler_frontier/src/lib.rs
use tracewake_core::scheduler::DeterministicScheduler;
use tracewake_core::time::SimTick;

pub fn assign_scheduler_frontier() {
    let mut scheduler = DeterministicScheduler::new(SimTick::ZERO);
    scheduler.current_tick = SimTick::new(99);
}
